--- a/styles/main.css
+++ b/styles/main.css
@@ -8,13 +8,26 @@ html, body {
 }
 
 .notice {
-    font-size: 16px;
+    font-size: 18px;
     padding: 60px;
     text-align: center;
 }
 
-#error-symbol {
+.error-message {
     display: none;
+}
+
+.warning-message-box {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+}
+
+.warning-message {
+    display: none;
+    color: red;
+    background: antiquewhite;
 }
 
 .main-section {
@@ -50,14 +63,14 @@ html, body {
     white-space: pre;
 }
 
-#google-map-container {
+.gm-container {
     width: 100%;
     height: 100%;
     position: relative;
     top:0;
 }
 
-#google-map {
+.gm {
     height: 100vh;
     width: 100%;
 }
@@ -69,10 +82,6 @@ html, body {
 
 .gm-infoWindow img {
     max-width: 100% !important;
-}
-
-footer {
-    height:5vh;
 }
 
 #markerLayer img[src='./assets/icons/currentPosition.png'] {
